# repa-utils

./: README.md  repa-utils.cabal
src/Data/Array/Repa/: Instances.hs  Tree.hs
src/Data/Array/Repa/Operators/: Filtering.hs
src/Data/Array/Repa/Shape/: Int.hs  Linear.hs
