name:                repa-utils
version:             0.0.1
synopsis:            Utilities for working with repa.
description:         See README.md for details.
homepage:            https://github.com/TerrorJack/repa-utils
license:             BSD3
license-file:        LICENSE
author:              Shao Cheng
maintainer:          astrohavoc@gmail.com
copyright:           2016 Shao Cheng
category:            Data
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Data.Array.Repa.Shape.Int
                       Data.Array.Repa.Operators.Filtering
                       Data.Array.Repa.Tree
  build-depends:       base, repa
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TerrorJack/repa-utils
